Trialling this out to see if this works

--- a/timeline_cards/package.json
+++ b/timeline_cards/package.json
@@ -10,14 +10,15 @@
     "build:prod": "export NODE_ENV=production && next build && next export"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.16.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "framer-motion": "^4.1.17",
-    "next": "12",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-ga": "^3.3.0"
   },
   "devDependencies": {
